[gd_scene load_steps=7 format=3 uid="uid://dnaixupxvjeww"]

[ext_resource type="Script" uid="uid://sjesvapfbni8" path="res://evolution_animation.gd" id="1_s1p8l"]
[ext_resource type="Material" uid="uid://d30aqi80c1nrc" path="res://art/white_sprite_material.tres" id="2_u6r6q"]
[ext_resource type="Texture2D" uid="uid://rjfylssdvk1q" path="res://art/sprites/1.png" id="3_alsea"]
[ext_resource type="Texture2D" uid="uid://db6gl4rk3kxn6" path="res://art/sprites/2.png" id="4_we4lt"]

[sub_resource type="Gradient" id="Gradient_h03dp"]
offsets = PackedFloat32Array(0, 0.548246, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.603922, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s8615"]
gradient = SubResource("Gradient_h03dp")

[node name="EvolutionAnimation" type="CanvasLayer"]
process_mode = 3
layer = 50
script = ExtResource("1_s1p8l")

[node name="BGLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 49

[node name="Background" type="TextureRect" parent="BGLayer"]
unique_name_in_owner = true
process_mode = 3
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("GradientTexture1D_s8615")
expand_mode = 1

[node name="SpritesLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 50

[node name="sprite_current" type="Sprite2D" parent="SpritesLayer"]
unique_name_in_owner = true
process_mode = 3
texture = ExtResource("3_alsea")
flip_h = true

[node name="sprite_evolved" type="Sprite2D" parent="SpritesLayer"]
unique_name_in_owner = true
process_mode = 3
texture = ExtResource("4_we4lt")
flip_h = true

[node name="sprite_current_white" type="Sprite2D" parent="SpritesLayer"]
unique_name_in_owner = true
process_mode = 3
material = ExtResource("2_u6r6q")
texture = ExtResource("3_alsea")
flip_h = true

[node name="sprite_evolved_white" type="Sprite2D" parent="SpritesLayer"]
unique_name_in_owner = true
process_mode = 3
material = ExtResource("2_u6r6q")
texture = ExtResource("4_we4lt")
flip_h = true

[node name="Label" type="Label" parent="SpritesLayer"]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -44.0
offset_right = 21.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
text = "What..?"
